# celery

./: README.md  pyproject.toml
src/celery_app/: __init__.py  celery_configs.py  celery_tasks.py  configs.py  main.py
src/celery_app/scrapy/: main_test.py  redis_test.py
